--- a/package.json
+++ b/package.json
@@ -12,23 +12,34 @@
     "postinstall": "npm run install:husky"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
+    "@vitejs/plugin-legacy": "^1.5.1",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.3.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.15.1",
     "husky": "^7.0.1",
+    "is-ci": "^3.0.0",
+    "less": "^4.1.1",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
     "typescript": "^4.3.2",
     "vite": "^2.4.3",
+    "vite-plugin-compression": "^0.3.3",
+    "vite-plugin-html": "^2.0.7",
+    "vite-plugin-purge-icons": "^0.7.0",
+    "vite-plugin-windicss": "^1.2.7",
     "vue-eslint-parser": "^7.10.0",
-    "vue-tsc": "^0.0.24"
+    "vue-tsc": "^0.0.24",
+    "windicss": "^3.1.6"
   }
 }
