--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "types": ["vite/client"],
+    "noImplicitAny": false,
+    "skipLibCheck": true,
     "allowJs": true,
     "checkJs": false,
     "typeRoots": ["./node_modules/@types/", "./types"],
